# unifictl

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PROPOSAL.md  README.md  SPEC.md  Taskfile.yml  mise.toml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yaml  release.yaml
decisions/: 2026-07-09-lag-toggle-model.md  2026-07-09-no-shared-library.md  2026-07-09-private-api-auth.md  2026-07-10-homebrew-bump-cooldown-gotcha.md  2026-07-11-tap-unsigned-commits-bypass.md  2026-07-12-config-profiles-inline-secrets.md  2026-07-13-separate-credential-store.md  2026-07-14-completion-static-tree-drift-guard.md  2026-07-14-dns-records-belong-to-terraform.md
docs/superpowers/plans/: 2026-07-10-read-commands.md  2026-07-10-shell-completion.md  2026-07-13-completion-names-and-flags.md  2026-07-13-config-profiles.md  2026-07-13-profiles-credentials-redesign.md
docs/superpowers/specs/: 2026-07-10-read-commands-design.md  2026-07-10-shell-completion-design.md  2026-07-12-config-profiles-design.md  2026-07-13-completion-names-and-flags-design.md  2026-07-13-profiles-credentials-redesign-design.md
src/unifictl/: __init__.py  cli.py
src/unifictl/_completion/: __init__.py  unifictl.bash  unifictl.fish  unifictl.zsh
src/unifictl/application/: __init__.py  device_service.py  lag_service.py
src/unifictl/commands/: __init__.py  _complete.py  _editor.py  _prompt.py  completion.py  credential.py  list_.py  profile.py  set.py  show.py
src/unifictl/domain/: __init__.py  aggregation.py  devices.py  models.py  ports.py
src/unifictl/infrastructure/: __init__.py  backup.py  client.py  config.py  credential_store.py  profile_store.py
tests/: conftest.py  test_aggregation.py  test_backup.py  test_cli.py  test_client.py  test_cmd_completion.py  test_cmd_credential.py  test_cmd_profile.py  test_complete.py  test_completion_scripts.py  test_completion_tree_drift.py  test_config.py  test_credential_store.py  test_device_service.py  test_devices.py  test_e2e_lag.py  test_e2e_reads.py  test_editor.py  test_lag_service.py  test_list_command.py  test_ports.py  test_profile_store.py  test_set_command.py  test_show_command.py
