[project]
name = "unifictl"
version = "0.3.1"
description = "Imperative UniFi homelab actions the Integration API can't express"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "cyclopts==4.11.2",
    "httpx>=0.28",
    "questionary>=2.0",
    "rich>=13",
    "tomlkit>=0.13",
    "xdg-base-dirs>=6",
]

[project.scripts]
unifictl = "unifictl.cli:main"

[dependency-groups]
dev = [
    "hypothesis>=6",
    "import-linter>=2",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "ty>=0.0.1a8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unifictl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.rules]
# strict-by-default; tighten as needed

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
# test_cli.py monkeypatches sys.argv and calls main() (which invokes app() with
# no tokens, exercising the production argv-reading branch). Cyclopts can't tell
# this from a forgotten `app([])` and warns; the warning is a false positive.
filterwarnings = [
    "ignore:Cyclopts application invoked without tokens.*:UserWarning",
]

[tool.importlinter]
root_package = "unifictl"

# The private-API client stays isolated so it faithfully mirrors unifi-mcp's
# documented contract (SPEC.md §3) — infrastructure must not depend on the
# domain rules or application use-cases.
[[tool.importlinter.contracts]]
name = "Client isolation: infrastructure imports neither domain nor application"
type = "forbidden"
source_modules = ["unifictl.infrastructure"]
forbidden_modules = ["unifictl.domain", "unifictl.application"]

# DDD layering: commands -> application -> domain (higher may import lower only).
[[tool.importlinter.contracts]]
name = "DDD layers"
type = "layers"
layers = [
    "unifictl.commands",
    "unifictl.application",
    "unifictl.domain",
]
